[gd_scene load_steps=6 format=3 uid="uid://knsk85njg0oy"]

[ext_resource type="Script" uid="uid://csf7rnmmf6iwp" path="res://scirpts/restroom_cabinet.gd" id="1_nl4hn"]
[ext_resource type="Texture2D" uid="uid://8hjk1dxoy637" path="res://assets/furnitures/sprite_21.png" id="2_cn0uq"]
[ext_resource type="Texture2D" uid="uid://cojd8eexj47qr" path="res://assets/furnitures/sprite_22.png" id="3_akw82"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qyb2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cn0uq")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_akw82")
}],
"loop": false,
"name": &"hide",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opfh4"]
size = Vector2(283, 275)

[node name="RestroomCabinet" type="Node2D"]
script = ExtResource("1_nl4hn")

[node name="RestroomCabinet" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qyb2u")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 77.5)
shape = SubResource("RectangleShape2D_opfh4")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_body_exited"]
